--- a/ITMO.ASP.NET.Lab3/Styles.css
+++ b/ITMO.ASP.NET.Lab3/Styles.css
@@ -1,4 +1,6 @@
-﻿h1 {
+﻿body {
+}
+h1 {
     margin: 0px;
     padding: 2px 0;
     font-size: 30px;
@@ -24,13 +26,4 @@
 button[type=submit] {
     margin-top: 15px;
     padding: 5px;
-}
-
-table, td, th {
-    border: thin solid black;
-    border-collapse: collapse;
-    padding: 5px;
-    background-color: lemonchiffon;
-    text-align: left;
-    margin: 10px 0;
 }
