--- a/ITMO.ASP.NET.MVC.Lab5/Views/Shared/_Layout.cshtml
+++ b/ITMO.ASP.NET.MVC.Lab5/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Послать заявку", "CreateBid", "Home")</li>
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("Информация", "About", "Home")</li>
                     <li>@Html.ActionLink("Связаться", "Contact", "Home")</li>
