--- a/ITMO.ASP.NET.MVC.Lab6/Views/Home/CreateBid.cshtml
+++ b/ITMO.ASP.NET.MVC.Lab6/Views/Home/CreateBid.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewBag.Title = "CreateBid";
+    ViewBag.Title = "Создать заявку";
 }
 
-<h2>CreateBid</h2>
+<h2>Создать заявку</h2>
 
 <h3>Существующие заявки</h3>
 
