--- a/ITMO.ASP.NET.MVC.Lab6/Views/Shared/_Layout.cshtml
+++ b/ITMO.ASP.NET.MVC.Lab6/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                     <li>@Html.ActionLink("Главная", "Index", "Home")</li>
                     <li>@Html.ActionLink("Послать заявку", "CreateBid", "Home")</li>
                     <li>@Html.ActionLink("Просмотреть заявки", "Index", "Bids")</li>
+                    <li>@Html.ActionLink("Кредиты", "Index", "Credits")</li>
                 </ul>
             </div>
         </div>
